07-Helm/kiali-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: istio-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali-ingress
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cert
    traefik.ingress.kubernetes.io/router.middlewares: istio-system-redirect@kubernetescrd
spec:
  rules:
  - host: william.techbash.otherdevopsgene.dev # replace william with your username
    # or william.techbash.otherdevopsgene.work or william.techbash.otherdevopsgene.xyz
    http:
      paths:
      - path: /kiali
        pathType: Prefix
        backend:
          service:
            name: kiali
            port:
              number: 20001
  tls:
  - hosts:
    - william.techbash.otherdevopsgene.dev # match the host above
    secretName: acme-tls-cert
